--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@ referrerpolicy="no-referrer" />
     <article class="about-container">
         <section class="about-ps">
             <div class="ps-content">
-                <h2>PlayStation Studios</h2>
+           <h1>PlayStation Studios</h1>
                 <p>We love storytelling, it inspires and drives everything we do. <br>
 
 This organisation has defined gaming for generations.
- Our collective of studios and teams span the globe – and together
-  – advance gaming and the positive impact it has on people’s lives.
+ Our collective of studios and teams span the globe and together
+  advance gaming and the positive impact it has on peoples lives.
 
 PlayStation Studios is the fabric that binds us together, 
 with the boldness and spirit to explore, the passion to invent and reinvent,
- and the confidence to let imagination lead the way.</p>
+ and the confidence to let imagination lead the way.</p>     
          </div>
              <div class="video-container">
                 <video height="100%" width="100%" controls>
