--- a/index.html
+++ b/index.html
@@ -182,35 +182,35 @@ with the boldness and spirit to explore, the passion to invent and reinvent,
     </section>
     <section class="grid1">
         <div>
-            <img src="/assets/studioGrid1Img1.png" alt=""/>
+            <img src="/assets/studioGrid3Img1.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a>
         </div>
         <div>
-            <img src="/assets/studioGrid1Img2.png" alt=""/>
+            <img src="/assets/studioGrid3Img2.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a>
         </div>
-        <div> <img src="/assets/studioGrid1Img3.png" alt=""/>
+        <div> <img src="/assets/studioGrid3Img3.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a></div>
-        <div> <img src="/assets/studioGrid1Img2.png" alt=""/>
+        <div> <img src="/assets/studioGrid3Img4.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a></div>
     </section>
 
     <section class="grid2">
         <div>
-            <img src="/assets/studioGrid1Img1.png" alt=""/>
+            <img src="/assets/studioGrid4Img1.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a>
         </div>
-        <div> <img src="/assets/studioGrid1Img2.png" alt=""/>
+        <div> <img src="/assets/studioGrid4Img2.png" alt=""/>
             <p>The team behind the PS5 exclusive Astro's Playroom</p>
             <a href="#">Visit Team Asobi </a></div>
-        <div> <img src="/assets/studioGrid1Img2.png" alt=""/>
-            <p>The team behind the PS5 exclusive Astro's Playroom</p>
-            <a href="#">Visit Team Asobi </a></div>
+        <div> <img src="/assets/studiogrid4Img3.png" alt=""/>
+            <p>Collaborating with ambitious external studios across the globe.</p>
+            </div>
         
     </section>
 </article>
@@ -227,7 +227,7 @@ with the boldness and spirit to explore, the passion to invent and reinvent,
 </article> 
 
  <!-- Swiper script CDN -->
-    <script type="module">
+    <!-- <script type="module">
       const swiper = new Swiper(".mySwiper", {
         slidesPerView: 1.5,
         spaceBetween: 30,
@@ -238,6 +238,8 @@ with the boldness and spirit to explore, the passion to invent and reinvent,
           prevEl: ".swiper-button-prev",
         },
       });
-    </script>
+    </script> -->
+    <script src="script.js"></script>
+
 </body>
 </html>
